feat:Added Fast-fourier transform code

--- a/spike.ipynb
+++ b/spike.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f7ad808f",
    "metadata": {},
    "outputs": [],
@@ -12,27 +12,25 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Parameters\n",
-    "num_samples = 5000  # total number of samples\n",
-    "baseline_noise_level = 0.2  # normal noise\n",
-    "num_spikes = 120  # number of spikes\n",
-    "spike_height_range = (3, 10)  # min and max spike height\n",
+    "num_samples = 5000\n",
+    "baseline_noise_level = 0.2\n",
+    "num_spikes = 100\n",
+    "spike_height_range = (3, 10)\n",
     "\n",
-    "# 1. Generate base signal with low noise\n",
+    "# Generate base signal\n",
     "signal = np.random.normal(0, baseline_noise_level, num_samples)\n",
     "\n",
-    "# 2. Insert random spikes at random locations\n",
+    "# Insert spikes\n",
     "spike_indices = np.random.choice(num_samples, size=num_spikes, replace=False)\n",
     "for idx in spike_indices:\n",
     "    spike_height = np.random.uniform(*spike_height_range)\n",
     "    signal[idx] += spike_height\n",
     "\n",
-    "# 3. Create DataFrame and export to CSV\n",
-    "df = pd.DataFrame({\n",
-    "    'Time': np.arange(num_samples),  # you can scale this to real time\n",
-    "    'Amplitude': signal\n",
-    "})\n",
-    "df.to_csv('spiky_signal.csv', index=False)\n",
+    "# Convert to DataFrame with one column\n",
+    "df = pd.DataFrame(signal, columns=[\"Amplitude\"])\n",
     "\n",
+    "# Save to CSV\n",
+    "df.to_csv('spiky_signal_5000x1.csv', index=False, header=False)\n",
     "\n"
    ]
   },
